--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,7 +1,8 @@
 # Reference: https://github.com/golangci/golangci-lint-action
+name: golangci-lint
 on: [push]
-name: lint
-
+permissions:
+  contents: read
 jobs:
   golangci:
     name: lint
@@ -9,9 +10,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.17
+          go-version: 1.18
       - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.29
