User app_env for startup

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,3 +21,7 @@ spec:
           image: hashimovh/ticket-analysis-service:latest
           ports:
             - containerPort: 8080
+          envFrom:
+            - configMapRef:
+                name: configmap
+          
